# api_notification_service

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
notification_service/: celery.py  settings.py  urls.py  yasg.py
notification_service/sending/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  views.py
